{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 57,
  "lineage": "dfc3f589-c9a9-3c7a-3ad0-5f1e7a07a48e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:security-group/sg-0c65db2d114bb7373",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c65db2d114bb7373",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "all_worker_management2022072102414363440000000b",
            "name_prefix": "all_worker_management",
            "owner_id": "395600767417",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:security-group/sg-0efe275c92c5a51b1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0efe275c92c5a51b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "worker_group_mgmt_one20220721024140472600000009",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "395600767417",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:security-group/sg-0eaebfec8f26b3313",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eaebfec8f26b3313",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "worker_group_mgmt_two2022072102414354430000000a",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "395600767417",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:security-group/sg-0dc00b1e3d2249753",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0dc00b1e3d2249753",
            "ingress": [],
            "name": "education-eks-qVfLOi8p2022072102414370680000000c",
            "name_prefix": "education-eks-qVfLOi8p",
            "owner_id": "395600767417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-qVfLOi8p-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "education-eks-qVfLOi8p-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:security-group/sg-08628060fd2f2c0b0",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-08628060fd2f2c0b0",
            "ingress": [],
            "name": "education-eks-qVfLOi8p2022072102414386000000000d",
            "name_prefix": "education-eks-qVfLOi8p",
            "owner_id": "395600767417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-qVfLOi8p-eks_worker_sg",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "owned"
            },
            "tags_all": {
              "Name": "education-eks-qVfLOi8p-eks_worker_sg",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-928722522",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dc00b1e3d2249753",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1711566441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dc00b1e3d2249753",
            "self": false,
            "source_security_group_id": "sg-08628060fd2f2c0b0",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1533115296",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08628060fd2f2c0b0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-595227149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08628060fd2f2c0b0",
            "self": false,
            "source_security_group_id": "sg-0dc00b1e3d2249753",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-342823128",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08628060fd2f2c0b0",
            "self": false,
            "source_security_group_id": "sg-0dc00b1e3d2249753",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1914795962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08628060fd2f2c0b0",
            "self": false,
            "source_security_group_id": "sg-08628060fd2f2c0b0",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba0da58331552721",
            "domain": "vpc",
            "id": "eipalloc-0ba0da58331552721",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-3-119.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.3.119",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "education-vpc-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:internet-gateway/igw-0e8b8ba4fa78723c6",
            "id": "igw-0e8b8ba4fa78723c6",
            "owner_id": "395600767417",
            "tags": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "tags_all": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ba0da58331552721",
            "connectivity_type": "public",
            "id": "nat-054e39013a3efccdc",
            "network_interface_id": "eni-0fe4ebd897c5a390d",
            "private_ip": "10.0.4.237",
            "public_ip": "3.135.3.119",
            "subnet_id": "subnet-0a78547f298bc72b8",
            "tags": {
              "Name": "education-vpc-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-047ccdf1730f150061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-054e39013a3efccdc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-047ccdf1730f15006",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e8b8ba4fa78723c6",
            "id": "r-rtb-051d84c7b556e3b241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051d84c7b556e3b24",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:route-table/rtb-047ccdf1730f15006",
            "id": "rtb-047ccdf1730f15006",
            "owner_id": "395600767417",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-vpc-private",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-private",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:route-table/rtb-051d84c7b556e3b24",
            "id": "rtb-051d84c7b556e3b24",
            "owner_id": "395600767417",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-vpc-public",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "tags_all": {
              "Name": "education-vpc-public",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f890f4393aeac169",
            "route_table_id": "rtb-047ccdf1730f15006",
            "subnet_id": "subnet-0305fdc78a66161fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eabfbdb00d8886c",
            "route_table_id": "rtb-047ccdf1730f15006",
            "subnet_id": "subnet-0f96c969290874587"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae0726b2e1e7c68",
            "route_table_id": "rtb-047ccdf1730f15006",
            "subnet_id": "subnet-056af5f8886d74047"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce6faece4293dfe",
            "route_table_id": "rtb-051d84c7b556e3b24",
            "subnet_id": "subnet-0a78547f298bc72b8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065a1ed7a6298135e",
            "route_table_id": "rtb-051d84c7b556e3b24",
            "subnet_id": "subnet-03f209a30959721ec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077e78fc67f5abe53",
            "route_table_id": "rtb-051d84c7b556e3b24",
            "subnet_id": "subnet-0b5776351f22fe778"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:subnet/subnet-0305fdc78a66161fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0305fdc78a66161fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395600767417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:subnet/subnet-0f96c969290874587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f96c969290874587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395600767417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-2b",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-2b",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:subnet/subnet-056af5f8886d74047",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056af5f8886d74047",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395600767417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-2c",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-2c",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:subnet/subnet-0a78547f298bc72b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a78547f298bc72b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395600767417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-2a",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:subnet/subnet-03f209a30959721ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f209a30959721ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395600767417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-2b",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-2b",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:subnet/subnet-0b5776351f22fe778",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5776351f22fe778",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "395600767417",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-2c",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-2c",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04a28783f58e3244f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:395600767417:vpc/vpc-04a28783f58e3244f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbd73182c90a6218",
            "default_route_table_id": "rtb-03d21f4f1316a94fb",
            "default_security_group_id": "sg-02a46c905b8d196cd",
            "dhcp_options_id": "dopt-0189d17d429b4cbef",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04a28783f58e3244f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d21f4f1316a94fb",
            "owner_id": "395600767417",
            "tags": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            },
            "tags_all": {
              "Name": "education-vpc",
              "kubernetes.io/cluster/education-eks-qVfLOi8p": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}